fix: algumas verificacoes de existencia de treinador para os metodos utilizados